--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
 <div class="weather-dashboard">
     <header class="weather-dashboard__header">
-        <input type="text" class="weather__search" placeholder="Search for cities">
+        <form action="" class="weather-dashboard__form">
+            <input type="text" class="weather-dashboard__search" placeholder="Search for cities">
+            
+        </form>
+        
     </header>
 
     <div class="weather-dashboard__main">
